[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Enviornment.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=4]
[ext_resource path="res://Scenes/GUI.tscn" type="PackedScene" id=5]

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="Enviornment" parent="." instance=ExtResource( 1 )]

[node name="Ball" parent="." groups=["ball"] instance=ExtResource( 2 )]
speed = 10

[node name="Player" parent="." instance=ExtResource( 3 )]
speed = 20

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 900, 360 )

[node name="GUI" parent="." instance=ExtResource( 5 )]

[node name="BallSpawn" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="game_over" from="Ball" to="." method="_on_Ball_game_over"]
[connection signal="game_over" from="Ball" to="GUI" method="_on_Ball_game_over"]
[connection signal="hit" from="Ball" to="." method="_on_Ball_hit"]
[connection signal="start" from="GUI" to="." method="_on_GUI_start_button"]
[connection signal="timeout" from="BallSpawn" to="Ball" method="_on_Ball_Spawn_timeout"]
